REOPENED216979
Fix image-loading-lazy-multiple-times.html
https://bugs.webkit.org/show_bug.cgi?id=216979
Summary Fix image-loading-lazy-multiple-times.html
Rob Buis
Reported 2020-09-25 10:03:26 PDT
Fix image-loading-lazy-multiple-times.html
Attachments
Patch (3.42 KB, patch)
2020-09-25 10:05 PDT, Rob Buis
no flags
Patch (3.67 KB, patch)
2020-10-07 13:21 PDT, Rob Buis
no flags
Patch (3.67 KB, patch)
2020-10-07 22:50 PDT, Rob Buis
no flags
Patch (3.73 KB, patch)
2021-03-17 06:51 PDT, Rob Buis
no flags
Patch (3.77 KB, patch)
2021-10-18 07:35 PDT, Rob Buis
no flags
Patch (3.79 KB, patch)
2021-12-17 02:53 PST, Rob Buis
no flags
Patch (3.66 KB, patch)
2021-12-30 01:34 PST, Rob Buis
no flags
Patch (4.21 KB, patch)
2022-09-01 07:43 PDT, Rob Buis
no flags
Patch (4.82 KB, patch)
2022-09-02 02:03 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2020-09-25 10:05:53 PDT
Radar WebKit Bug Importer
Comment 2 2020-10-02 10:05:23 PDT
Rob Buis
Comment 3 2020-10-07 13:21:08 PDT
Rob Buis
Comment 4 2020-10-07 22:50:38 PDT
EWS
Comment 5 2020-10-08 05:49:44 PDT
Committed r268178: <https://trac.webkit.org/changeset/268178> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410810 [details].
Karl Rackler
Comment 6 2020-10-16 16:07:27 PDT
Reverted r268178 for reason: This reverts commit r268178 because it caused a test failure. Committed r268619: <https://trac.webkit.org/changeset/268619>
ssggg2015
Comment 7 2020-10-18 23:22:08 PDT Comment hidden (spam)
Rob Buis
Comment 8 2021-03-17 06:51:39 PDT
Rob Buis
Comment 9 2021-10-18 07:35:28 PDT
Rob Buis
Comment 10 2021-12-17 02:53:33 PST
Rob Buis
Comment 11 2021-12-30 01:34:32 PST
Rob Buis
Comment 12 2022-09-01 07:43:52 PDT
Rob Buis
Comment 13 2022-09-02 02:03:10 PDT
EWS Watchlist
Comment 14 2022-09-02 02:05:35 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Rob Buis
Comment 15 2022-09-02 02:07:30 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/35766
EWS
Comment 16 2022-09-03 01:20:54 PDT
Committed 254127@main (fe2b4d3a37eb): <https://commits.webkit.org/254127@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462092 [details].
WebKit Commit Bot
Comment 17 2022-10-31 16:56:31 PDT
Re-opened since this is blocked by bug 247297
Said Abou-Hallawa
Comment 18 2022-11-01 13:51:03 PDT
The change 254127@main causes the images on nytimes.com to flicker when hovering.
Darin Adler
Comment 19 2022-11-01 13:53:40 PDT
To be clear: This change *Was* causing that, and is now reverted.
Karl Dubost
Comment 20 2022-12-01 14:17:33 PST
See the discussions in Bug 248025 and https://github.com/whatwg/html/issues/8524 I wonder if there is ambiguity in between the two.
Note You need to log in before you can comment on or make changes to this bug.