Fix image-loading-lazy-multiple-times.html https://bugs.webkit.org/show_bug.cgi?id=216979

Reviewed by Darin Adler.

Once an image has been lazy loaded, it should be possible
to trigger a new lazy load through relevant mutations.

Test: imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-multiple-times.html

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-multiple-times-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-img-element/image-loading-lazy-multiple-times.html:
* Source/WebCore/loader/ImageLoader.cpp:
(WebCore::ImageLoader::updateFromElement):

Canonical link: https://commits.webkit.org/254127@main